--- a/template/remember_card.html
+++ b/template/remember_card.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
-    <link rel="stylesheet" href="./assets/css/remember_card.css">
+    <link rel="stylesheet" href="./assets/css/flash_card.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=vietnamese"
         rel="stylesheet">
 
@@ -487,7 +487,8 @@
                             <button class="card__item-control-btn card__item-control-speech-btn">
                                 <i class="fas fa-volume-up"></i>
                             </button>
-                            <button class="card__item-control-btn card__item-control-star-btn card__item-control-star-btn--active">
+                            <button
+                                class="card__item-control-btn card__item-control-star-btn card__item-control-star-btn--active">
                                 <i class="fas fa-star"></i>
                             </button>
                         </div>
@@ -506,7 +507,8 @@
                             <button class="card__item-control-btn card__item-control-edit-btn">
                                 <i class="fas fa-pencil-alt"></i>
                             </button>
-                            <button class="card__item-control-btn card__item-control-star-btn card__item-control-star-btn--active">
+                            <button
+                                class="card__item-control-btn card__item-control-star-btn card__item-control-star-btn--active">
                                 <i class="fas fa-star"></i>
                             </button>
                         </div>
@@ -544,7 +546,7 @@
                     </div>
                     <div class="card__item-definition card__item-text">
                         <div class="card__item-side card__item-side-definition">
-                           Tạm biệt
+                            Tạm biệt
                         </div>
                         <div class="card__item-control">
                             <button class="card__item-control-btn card__item-control-edit-btn">
@@ -588,7 +590,7 @@
                     </div>
                     <div class="card__item-definition card__item-text">
                         <div class="card__item-side card__item-side-definition">
-                           Đại học
+                            Đại học
                         </div>
                         <div class="card__item-control">
                             <button class="card__item-control-btn card__item-control-edit-btn">
@@ -768,7 +770,8 @@
                         <div class="setting__dialog-body-group-btn">
                             <button class="setting__dialog-body-btn-item
                              setting__dialog-body-btn--active" id="setting__list-card-all-btn">Tất cả</button>
-                            <button class="setting__dialog-body-btn-item" id="setting__list-card-star-btn">Có gắn sao</button>
+                            <button class="setting__dialog-body-btn-item" id="setting__list-card-star-btn">Có gắn
+                                sao</button>
                         </div>
                     </div>
                 </div>
@@ -820,7 +823,7 @@
 
 
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/remember_card.js"></script>
+    <script src="./assets/js/flash_card.js"></script>
     <script src="./assets/js/header.js"></script>
 </body>
 
