--- a/template/flash_card.html
+++ b/template/flash_card.html
@@ -653,6 +653,8 @@
                     </div>
                 </div>
 
+                
+                <!-- it's a special item, display the result -->
                 <div class="card__item card__item-special">
                     <div class="card__item-special-title">
                         <img src="https://assets.quizlet.com/a/j/dist/app/i/cards/learn_preview/trophy.0c9b06e0b8da370.svg"
