--- a/template/term_details.html
+++ b/template/term_details.html
@@ -425,7 +425,7 @@
                 </div>
                 <ul class="study__mode-content">
                     <li class="study__mode-item">
-                        <a href="#" class="study__mode-link">
+                        <a href="flash_card.html" class="study__mode-link">
                             <i class="bi bi-back"></i>
                             <span class="study__mode-text">
                                 Thẻ ghi nhớ
@@ -433,7 +433,7 @@
                         </a>
                     </li>
                     <li class="study__mode-item">
-                        <a href="#" class="study__mode-link">
+                        <a href="study_page.html" class="study__mode-link">
                             <i class="bi bi-info-circle"></i>
                             <span class="study__mode-text">
                                 Học
