--- a/template/study_page.html
+++ b/template/study_page.html
@@ -658,7 +658,13 @@
                             </span>
                         </button>
                     </div>
+                    <canvas class="confetti" id="canvas">
+
+                    </canvas>
                 </div>
+
+
+
 
             </div>
         </div>
@@ -773,6 +779,7 @@
 
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/study.js"></script>
+    <script src="./assets/js/confetti.js"></script>
 
 </body>
 
