add key event for multiple choice

--- a/template/study_page.html
+++ b/template/study_page.html
@@ -674,7 +674,7 @@
         <div class="study__footer" id="study__footer-control" style="display: none">
             <div class="study__footer-content">
                 <div class="study__footer-title">
-                    Tiếp tục với chế độ học tự luận
+                    Tiếp tục học
                 </div>
                 <button class="study__footer-continue-btn" id="study__footer-continue-btn">
                     Tiếp tục
