--- a/template/assets/css/create_term.css
+++ b/template/assets/css/create_term.css
@@ -33,13 +33,13 @@
     border-radius: 3px;
     font-size: 1.4rem;
     font-weight: 500;
-    background-color: var(--green-color-light);
+    background-color: var(--green-color);
     color: var(--white-color);
 }
 
 .create__header-action-btn:hover {
     cursor: pointer;
-    background-color: var(--green-color);
+    background-color: var(--green-color-dark);
 }
 
 .create__term-body {
@@ -166,7 +166,7 @@
         border: 2px solid var( --gray-color-light);
         border-radius: 5px;
         font-size: 1.4rem;
-        color: var(--green-color-light);
+        color: var(--green-color);
         font-weight: 500;
 }
 
@@ -251,7 +251,7 @@
     padding: 24px;
     height: 70px;
     width: 100%;
-    background-color: var(--green-color-light);
+    background-color: var(--green-color);
     border: none;
     border-radius: 5px;
     color: var(--white-color);
@@ -262,7 +262,7 @@
 
 
 .create__term-add-word {
-    color: var(--green-color-light);
+    color: var(--green-color);
 
 }
 
@@ -302,7 +302,7 @@
 
 .create__term-permission-wrap {
     margin-left: 40px;
-    background-color: var(--green-color-light) !important;
+    background-color: var(--green-color) !important;
     width: 36px;
     height: 36px;
     color: var(--white-color);
@@ -315,7 +315,7 @@
 
 .create__term-permission-wrap:hover {
     cursor: pointer;
-    background-color: var(--green-color);
+    background-color: var(--green-color-dark);
 }
 
 .create__term-upload {}
@@ -360,7 +360,7 @@
 .create__term-upload-descr>span {
     font-size: 1.5rem;
     font-weight: 500;
-    color: var(--green-color-light);
+    color: var(--green-color);
 }
 
 .create__term-definition {
@@ -493,7 +493,7 @@
     font-size: 1.3rem;
     font-weight: 500;
     padding: 0;
-    color: var(--green-color-light)
+    color: var(--green-color)
 }
 
 .tab__content-side-label {
@@ -567,7 +567,7 @@
     color: var(--tex-color);
     /* display: block; */
     padding: 10px 5px 10px 0;
-    border-bottom: 5px solid var(--green-color-light);
+    border-bottom: 5px solid var(--green-color);
 
 }
 
@@ -575,7 +575,7 @@
 .create__term-btn {
     height: 70px;
     width: 190px;
-    background-color: var(--green-color-light);
+    background-color: var(--green-color);
     color: var(--white-color);
     border-radius: 5px;
     border: none;
@@ -589,7 +589,7 @@
 }
 
 .create__term-btn:hover {
-   background-color: var(--green-color)
+   background-color: var(--green-color-dark)
 }
 
 
