--- a/template/assets/css/flash_card.css
+++ b/template/assets/css/flash_card.css
@@ -35,7 +35,7 @@ body{
 }
 
 .control__back-btn i {
-    color: var(--green-color-light);
+    color: var(--green-color);
 }
 
 .control__back-btn-text {
@@ -107,7 +107,7 @@ body{
     border-radius: 3px;
     background-color: var(--white-color);
     margin-top: 16px;
-    color: var(--green-color-light);
+    color: var(--green-color);
     font-size: 1.5rem;
     font-weight: 500;
 }
@@ -308,7 +308,7 @@ body{
 }
 
 .card__item-special-icon--green{
-    color: var(--green-color);
+    color: var(--green-color-dark);
 }
 
 .card__item-special-icon--blue{ 
@@ -375,7 +375,7 @@ body{
     width: 36px;
     height: 36px;
     font-size: 1.3rem;
-    color: var(--green-color-light);
+    color: var(--green-color);
     background-color: var(--white-color);
     border: none;
     position: relative;
@@ -487,7 +487,7 @@ body{
 .edit__word-dialog-exit-btn{
     font-size: 1.5rem;
     font-weight: 500;
-    color: var(--green-color-light);
+    color: var(--green-color);
     background-color: transparent;
     border: none;
 }
@@ -499,7 +499,7 @@ body{
 .edit__word-dialog-save-btn{
     width: 110px;
     border: none;
-    background-color: var(--green-color-light);
+    background-color: var(--green-color);
     color: var(--white-color);
     font-size: 1.5rem;
     font-weight: 500;
@@ -508,7 +508,7 @@ body{
 }
 
 .edit__word-dialog-save-btn:hover{
-    background-color: var(--green-color);
+    background-color: var(--green-color-dark);
 }
 
 .setting__learning-dialog{
@@ -584,7 +584,7 @@ body{
     background-color: transparent;
     font-size: 1.5rem;
     font-weight: 500;
-    color:var(--green-color-light);
+    color:var(--green-color);
     padding: 0 15px;
 }
 
@@ -605,7 +605,7 @@ body{
     outline: none;
     font-size: 1.5rem;
     font-weight: 500;
-    color:var(--green-color-light);
+    color:var(--green-color);
 }
 
 
